test-data/gateway-class-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cloud-gw-gateway-class
  namespace: default
data:
  tier2GatewayClass: istio
  albTemplate: |
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: {{ .Name }}
      namespace: {{ .Namespace }}
    spec:
      ingressClassName: contour
      tls:
      - hosts:
        - foo.example.com
        secretName: {{ .Name }}-tls
      rules:
      - host: foo.example.com
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: {{ .Name }}-istio
                port:
                  number: 80
  tlsCertificateTemplate: |
    apiVersion: cert-manager.io/v1
    kind: Certificate
    metadata:
      name: {{ .Name }}-cert
      namespace: {{ .Namespace }}
    spec:
      secretName: {{ .Name }}-tls

      duration: 2160h # 90d
      renewBefore: 360h # 15d
      subject:
        organizations:
          - acme-example-corp
      isCA: false
      privateKey:
        algorithm: RSA
        encoding: PKCS1
        size: 2048
      usages:
        - server auth
        - client auth
      dnsNames:
        - foo.example.com
      issuerRef:
        name: ca-issuer
        kind: ClusterIssuer
        group: cert-manager.io
