test-data/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cloud-gw
spec:
  controllerName: "github.com/pixelperfekt-dk/cloud-gateway-controller"
  parametersRef:
    group: v1
    kind: ConfigMap
    name: cloud-gw-gateway-class
    namespace: default
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: cloud-gw-gateway-class
  namespace: default
data:
  tier2GatewayClass: istio
  albTemplate: |
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: {{ .Name }}
      namespace: {{ .Namespace }}
    spec:
      ingressClassName: contour
      tls:
      - hosts:
        - example.com
        secretName: {{ .Name }}-tls
      rules:
      - host: example.com
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: {{ .Name }}-istio
                port:
                  number: 80
  tlsCertificateTemplate: |
    apiVersion: cert-manager.io/v1
    kind: Certificate
    metadata:
      name: {{ .Name }}-cert
      namespace: {{ .Namespace }}
    spec:
      # Secret names are always required.
      secretName: {{ .Name }}-tls

      duration: 2160h # 90d
      renewBefore: 360h # 15d
      subject:
        organizations:
          - acme-example-corp
      isCA: false
      privateKey:
        algorithm: RSA
        encoding: PKCS1
        size: 2048
      usages:
        - server auth
        - client auth
      dnsNames:
        - example.com
      issuerRef:
        name: ca-issuer
        kind: ClusterIssuer
        group: cert-manager.io
