test-data/test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-echo
  name: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - image: hashicorp/http-echo:0.2.3
        name: http-echo
        args:
        - "-text=foo-bar"
        - "-listen=:80"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-echo
  name: http-echo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: http-echo
