test-data/test-gateway-site-dev-role.yaml
gateway:
  name: foo-gateway
  namespace: foo-infra

httproutes:
  foo-site:
    uriprefix: "/site"
    destination:
      name: foo-site
