test-data/test-gateway-sre-role.yaml
gateway:
  create: true
  name: foo-gateway
  gatewayClassName: cloud-gw
  listeners:
    web:
      port: 80
      protocol: HTTP
      hostname: "foo.example.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              allowGateway: foo

# This would be useful instead of allowedRoutes if ReferenceGrant was supported for Gateways.
#httproutes:
#  foo-site:
#    namespace: foo-site
#  foo-store:
#    namespace: foo-store
