test-data/user-gateway-values.yaml
gateway:
  create: true
  gatewayClassName: cloud-gw
  listeners:
    web:
      port: 80
      protocol: HTTP
      hostname: "example.com"

httproutes:
  rt1:
    uriprefix: "/foo"
    destination: http-echo
