test-data/wip.yaml
# Source: gateway-api/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rt1
  namespace: default
  labels:
    app: gw-internal
    gw-type: internal
spec:
  parentRefs:
  - kind: Gateway
    name: foo-gateway-api-istio
  rules:
  - backendRefs:
    - name: nginx
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /foo
